Update CMakeList for vector struct

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,20 @@
 cmake_minimum_required (VERSION 3.0)
 project (fell)
 
-set(SOURCES
-    ../src/fell.c
+set(HEADERS
+    src/util/vec.h
 )
 
-add_executable(fell ${SOURCES})
+set(SOURCES
+    src/fell.c
+    src/util/vec.c
+)
+
+
+include_directories(
+    src/util
+)
+
+add_executable(fell ${SOURCES} ${HEADERS})
 install(TARGETS fell DESTINATION bin)
 install(FILES ${CMAKE_CURRENT_BINARY_DIR}/../man/fell.1 DESTINATION share/man/man1)
