--- a/package/Arch/PKGBUILD
+++ b/package/Arch/PKGBUILD
@@ -10,6 +10,7 @@ license=('GPL3')
 depends=('glibc')
 optdepends=()
 makedepends=()
+conflicts=(${pkgname}-git)
 source=(${url}/releases/download/${pkgver}/${pkgname}-${pkgver}.tar.gz)
 sha256sums=('1d20ed725b1d3d6edbf17b1fdf5605c0ce568501d312894015fe132a0a9c12a9')
 
