Add headers to Makefile for "make dist" deploy

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,4 +1,4 @@
 AM_CPPFLAGS = -I$(top_srcdir)/src/util
 
 bin_PROGRAMS = fell
-fell_SOURCES = fell.c util/vec.c util/str.c
+fell_SOURCES = fell.c util/vec.c util/vec.h util/str.c util/str.h
