--- a/package/Arch/git/PKGBUILD
+++ b/package/Arch/git/PKGBUILD
@@ -2,7 +2,7 @@
 
 _pkgname=fell
 pkgname=${_pkgname}-git
-pkgver=20170423
+pkgver=2017.04.25
 pkgrel=1
 pkgdesc="Simple educational purpose shell"
 arch=('i686' 'x86_64')
@@ -17,11 +17,13 @@ sha256sums=('SKIP')
 
 pkgver() {
 	cd ${srcdir}/${_pkgname}
-	git log -1 --format="%cd" --date=short | sed "s|-||g"
+	git log -1 --format="%cd" --date=short | sed "s|-|.|g"
 }
 
 prepare() {
     cd ${srcdir}/${_pkgname}
+    VER_STR=$(git log -1 --format="%cd" --date=short | sed "s|-| |g")
+    ./set_version.sh ${VER_STR}
     ./prepare.sh
     ./configure --prefix=/usr
 }
