--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,8 @@ jobs:
     - uses: actions/checkout@v1
       with:
         fetch-depth: 1
+    - name: Install build dependencies
+      run: apt install pandoc
     - name: Create configure script
       run: ./prepare.sh
     - name: Configure project
