--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
       with:
         fetch-depth: 1
     - name: Install build dependencies
-      run: apt install pandoc
+      run: sudo apt install pandoc
     - name: Create configure script
       run: ./prepare.sh
     - name: Configure project
